--- a/carconnect_sdk/src/main/res/layout/activity_authentication.xml
+++ b/carconnect_sdk/src/main/res/layout/activity_authentication.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context=".ui.AuthenticationActivity">
 
     <WebView
@@ -26,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:indeterminate="true"
-        android:indeterminateTint="#4066F5"
+        android:indeterminateTint="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <nl.dionsegijn.konfetti.xml.KonfettiView
